# OKFgraph

./: IMPLEMENTATION_NOTES.md  LICENSE  README.md  architecture.md  implementation_status.md  pyproject.toml  requirements.txt
LICENSES/: Apache-2.0.txt  MIT.txt
benchmarks/: benchmark_200.py
examples/: hybrid_pdf_converter.py  okf_ingest_tool.py  okf_search_browser.py  oxide_to_markdown_converter.py
okfgraph/: __init__.py  cli.py  config.py  images.py  mcp_server.py  models.py  router.py  security.py  tools.py
okfgraph/components/: __init__.py  delta.py  embedding.py  export.py  image_assets.py  import_.py  ingest.py  lint.py  purge.py  schema.py  search.py
okfgraph/ingest/: __init__.py  assets.py  config.py  converter.py  engine.py  tables.py  versions.py
src/: images.py
tests/: __init__.py  test_chunk_search.py  test_chunking.py  test_cli.py  test_config.py  test_converter.py  test_delta.py  test_directory_hash.py  test_export_compliance.py  test_gpu_integration.py  test_graph_enrichment.py  test_images.py  test_ingest.py  test_ingest_tool.py  test_integration.py  test_logging.py  test_mcp_server.py  test_okf_ingest_tool.py  test_pdf_e2e.py  test_reconstruction.py  test_router.py  test_router_misc.py  test_search_browser.py  test_security.py
tests/fixtures/bundle/: advanced-topics.md  chunking-guide.md  intro.md
