[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "okfgraph"
version = "0.1.0"
description = "Ladybug-backed OKF knowledge graph with ONNX + Jina v5 embeddings"
requires-python = ">=3.10"
license = "Apache-2.1; MIT"
dependencies = [
    "ladybug>=0.17",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "optimum[onnxruntime]>=1.20",
    "transformers>=4.57",
    "torch>=2.5",
    "sentence-transformers>=3.0",
    "Pillow>=10.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pdf-ingest = [
    "pdf_oxide>=0.2.1",
    "rapidocr==1.5.2",
    "rapid_latex_ocr==1.0.13",
    "rapid_layout==0.2.0",
    "rapid_table==1.0.3",
]

[project.scripts]
okf = "okfgraph.cli:main"
okf-mcp = "okfgraph.mcp_server:main"

[tool.setuptools.packages.find]
include = ["okfgraph*"]

[tool.pytest]
markers = [
    "slow: GPU-heavy or large-batch tests",
    "integration: Tests with real model loading",
]
addopts = ["-v", "--tb=short"]
